--- a/pom.xml
+++ b/pom.xml
@@ -375,4 +375,18 @@
 		</profile>
 
     </profiles>
+
+    <distributionManagement>
+      <repository>
+         <id>nexus</id>
+         <name>Nexus</name>
+         <url>http://localhost:8081/nexus/content/repositories/releases/</url>
+      </repository>
+      <!--<snapshotRepository>
+         <id>deployment</id>
+         <name>Internal Releases</name>
+         <url>http://localhost:8081/nexus/content/repositories/snapshots/</url>
+      </snapshotRepository>-->
+    </distributionManagement>
+
 </project>
