--- a/pom.xml
+++ b/pom.xml
@@ -396,14 +396,14 @@
 
     <distributionManagement>
       <repository>
-         <id>nexus</id>
+         <id>enhamtest-nexus</id>
          <name>Nexus</name>
-         <url>http://nexus-enhamtest.rhcloud.com:8081/nexus/content/repositories/releases/</url>
+         <url>http://nexus-enhamprod.rhcloud.com/nexus/content/repositories/releases/</url>
       </repository>
       <snapshotRepository>
-         <id>deployment</id>
-         <name>Internal Releases</name>
-         <url>http://nexus-enhamtest.rhcloud.com:8081/nexus/content/repositories/snapshots/</url>
+         <id>enhamtest-nexus-snapshot</id>
+         <name>Nexus Snapshot</name>
+         <url>http://nexus-enhamprod.rhcloud.com/nexus/content/repositories/snapshots/</url>
       </snapshotRepository>
     </distributionManagement>
 
