--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.jboss.examples</groupId>
     <artifactId>ticket-monster</artifactId>
-    <version>2.6.1-SNAPSHOT</version>
+    <version>2.6.1-RELEASE</version>
     <packaging>war</packaging>
 
     <name>ticket-monster</name>
