--- a/pom.xml
+++ b/pom.xml
@@ -398,12 +398,12 @@
       <repository>
          <id>nexus</id>
          <name>Nexus</name>
-         <url>http://nexus-enhamprod.rhcloud.com/nexus/content/repositories/releases/</url>
+         <url>http://nexus-enham.rhcloud.com/nexus/content/repositories/releases/</url>
       </repository>
       <snapshotRepository>
          <id>nexus-snapshots</id>
          <name>Nexus Snapshots</name>
-         <url>http://nexus-enhamprod.rhcloud.com/nexus/content/repositories/snapshots/</url>
+         <url>http://nexus-enham.rhcloud.com/nexus/content/repositories/snapshots/</url>
       </snapshotRepository>
     </distributionManagement>
 
